src/objects/Application_Country__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Countries</relationshipLabel>
        <relationshipName>Application_Countries1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Application Countries</relationshipLabel>
        <relationshipName>Application_Countries1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Country</label>
    <nameField>
        <displayFormat>AppCountry-{0000}</displayFormat>
        <label>Application Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>